fixed album api
